.k8s/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-api
  namespace: ${KUBERNETES_NAMESPACE}
  labels:
    app: ${APP_NAME}-api
    service: api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ${APP_NAME}-api
      service: api
  template:
    metadata:
      labels:
        app: ${APP_NAME}-api
        service: api
    spec:
      containers:
        - name: ${APP_NAME}-api
          image: ${IMAGE_TAG}
          command:
            - /bin/sh
            - '-c'
            - STRAPI_ADMIN_BACKEND_URL=$STRAPI_ADMIN_BACKEND_URL NODE_ENV=production yarn build:api && yarn start:api
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 1337
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 4000m
              memory: 4Gi
          volumeMounts:
            - name: strapi-data
              mountPath: /app/packages/api/public/uploads

      volumes:
        - name: strapi-data
          hostPath:
            path: /opt/strapi-teachergpt
            type: Directory
