.k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-api
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: ${APP_NAME}-api
    service: api
